[package]
name = "skia-safe-metal-leak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foreign-types-shared = "0.1.1"
skia-safe = {version = "0.47.0", features = ["metal"]}
metal = "0.23.1"
memory-stats = "1.0.0"
once_cell = "1.15.0"
tracing = "0.1.37"
objc = "0.2.7"
textplots = "0.8.0"


[dev-dependencies]
serial_test = "0.6.0"
